refactor(java): điều chỉnh lại cấu trúc